Bug 157283 - dragging folders into places from fish:// KIO-slave does not work in dolphin
Summary: dragging folders into places from fish:// KIO-slave does not work in dolphin
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 161171 183010 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-02-06 20:27 UTC by Frederik V
Modified: 2009-05-30 02:20 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederik V 2008-02-06 20:27:35 UTC
Version:            (using KDE 4.0.0)
Installed from:    Ubuntu Packages

Dragging folders into places from fish:// KIO-slave does not work in dolphin. Dragging a local folder does work.
Comment 1 Peter Penz 2008-04-22 20:38:30 UTC
*** Bug 161171 has been marked as a duplicate of this bug. ***
Comment 2 Peter Penz 2008-04-22 20:39:12 UTC
From #161171: use smb://myserver/share/folder1 and try do drag/drop any folder to the left side bar (Places). It just do nothing. It works with local paths. 
Comment 3 Kevin Ottens 2008-04-25 09:50:11 UTC
SVN commit 800918 by ervin:

Be a bit more aggressive on the mime type resolving so that remote
directories URLs are recognized as directories.

BUG: 157283


 M  +3 -1      kfileplacesmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=800918
Comment 4 Frederik V 2008-05-30 11:40:56 UTC
Thanks for fixing, If i drag a folder from the center file view when browsing with sftp dolphin will crash when i drop it with, fish:// and local files works, using kdemod/arch Dolphin 1.0.99, KDE 4.0.81:

Application: Dolphin (dolphin), signal SIGSEGV
(no debugging symbols found)
Using host libthread_db library "/lib/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb611d6d0 (LWP 3809)]
[KCrash handler]
#6  0xb784ae7b in KMimeType::is () from /opt/kdemod/lib/libkdecore.so.5
#7  0xb739595b in KFilePlacesModel::dropMimeData ()
   from /opt/kdemod/lib/libkfile.so.4
#8  0xb6dd349b in QAbstractItemView::dropEvent () from /usr/lib/libQtGui.so.4
#9  0xb6df96bb in QListView::dropEvent () from /usr/lib/libQtGui.so.4
#10 0xb739b1ee in KFilePlacesView::dropEvent ()
   from /opt/kdemod/lib/libkfile.so.4
#11 0xb69a74b2 in QWidget::event () from /usr/lib/libQtGui.so.4
#12 0xb6cad5bc in QFrame::event () from /usr/lib/libQtGui.so.4
#13 0xb6d3b01e in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#14 0xb6ddd175 in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#15 0xb6d3d392 in ?? () from /usr/lib/libQtGui.so.4
#16 0xb7601beb in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#17 0xb6955896 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#18 0xb695d680 in QApplication::notify () from /usr/lib/libQtGui.so.4
#19 0xb7bfb484 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#20 0xb76028dc in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#21 0xb69cbb92 in ?? () from /usr/lib/libQtGui.so.4
#22 0xb69d04b7 in QDragManager::drop () from /usr/lib/libQtGui.so.4
#23 0xb69d064c in QDragManager::eventFilter () from /usr/lib/libQtGui.so.4
#24 0xb7601c88 in QCoreApplicationPrivate::sendThroughApplicationEventFilters
    () from /usr/lib/libQtCore.so.4
#25 0xb695583a in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#26 0xb695d929 in QApplication::notify () from /usr/lib/libQtGui.so.4
#27 0xb7bfb484 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#28 0xb76028dc in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#29 0xb695cc06 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#30 0xb69bfe13 in ?? () from /usr/lib/libQtGui.so.4
#31 0xb69becc3 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#32 0xb69e51a8 in ?? () from /usr/lib/libQtGui.so.4
#33 0xb6333f88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#34 0xb63374eb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#35 0xb6337668 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#36 0xb762a69d in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#37 0xb69e492e in ?? () from /usr/lib/libQtGui.so.4
#38 0xb76011cf in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#39 0xb7601390 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#40 0xb69ce79c in QDragManager::drag () from /usr/lib/libQtGui.so.4
#41 0xb69679b1 in QDrag::exec () from /usr/lib/libQtGui.so.4
#42 0xb7fe01e3 in DragAndDropHelper::startDrag ()
   from /opt/kdemod/lib/libdolphinprivate.so.4
#43 0xb7fd9571 in DolphinIconsView::startDrag ()
   from /opt/kdemod/lib/libdolphinprivate.so.4
#44 0xb6dd9489 in QAbstractItemView::mouseMoveEvent ()
   from /usr/lib/libQtGui.so.4
#45 0xb6defb27 in QListView::mouseMoveEvent () from /usr/lib/libQtGui.so.4
#46 0xb7be57ce in KCategorizedView::mouseMoveEvent ()
   from /opt/kdemod/lib/libkdeui.so.5
#47 0xb69a79db in QWidget::event () from /usr/lib/libQtGui.so.4
#48 0xb6cad5bc in QFrame::event () from /usr/lib/libQtGui.so.4
#49 0xb6d3b01e in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#50 0xb6ddd175 in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#51 0xb6d3d392 in ?? () from /usr/lib/libQtGui.so.4
#52 0xb7601beb in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#53 0xb6955896 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#54 0xb695d929 in QApplication::notify () from /usr/lib/libQtGui.so.4
#55 0xb7bfb484 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#56 0xb76028dc in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#57 0xb695cc06 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#58 0xb69bfe13 in ?? () from /usr/lib/libQtGui.so.4
#59 0xb69becc3 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#60 0xb69e51a8 in ?? () from /usr/lib/libQtGui.so.4
#61 0xb6333f88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#62 0xb63374eb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#63 0xb6337668 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#64 0xb762a69d in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#65 0xb69e492e in ?? () from /usr/lib/libQtGui.so.4
#66 0xb76011cf in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#67 0xb7601390 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#68 0xb760372d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#69 0xb6955764 in QApplication::exec () from /usr/lib/libQtGui.so.4
#70 0x080834bd in _start ()
#0  0xb800f424 in __kernel_vsyscall ()
Application: Dolphin (dolphin), signal SIGSEGV
(no debugging symbols found)
Using host libthread_db library "/lib/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread 0xb611d6d0 (LWP 3809)]
[KCrash handler]
#6  0xb784ae7b in KMimeType::is () from /opt/kdemod/lib/libkdecore.so.5
#7  0xb739595b in KFilePlacesModel::dropMimeData ()
   from /opt/kdemod/lib/libkfile.so.4
#8  0xb6dd349b in QAbstractItemView::dropEvent () from /usr/lib/libQtGui.so.4
#9  0xb6df96bb in QListView::dropEvent () from /usr/lib/libQtGui.so.4
#10 0xb739b1ee in KFilePlacesView::dropEvent ()
   from /opt/kdemod/lib/libkfile.so.4
#11 0xb69a74b2 in QWidget::event () from /usr/lib/libQtGui.so.4
#12 0xb6cad5bc in QFrame::event () from /usr/lib/libQtGui.so.4
#13 0xb6d3b01e in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#14 0xb6ddd175 in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#15 0xb6d3d392 in ?? () from /usr/lib/libQtGui.so.4
#16 0xb7601beb in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#17 0xb6955896 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#18 0xb695d680 in QApplication::notify () from /usr/lib/libQtGui.so.4
#19 0xb7bfb484 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#20 0xb76028dc in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#21 0xb69cbb92 in ?? () from /usr/lib/libQtGui.so.4
#22 0xb69d04b7 in QDragManager::drop () from /usr/lib/libQtGui.so.4
#23 0xb69d064c in QDragManager::eventFilter () from /usr/lib/libQtGui.so.4
#24 0xb7601c88 in QCoreApplicationPrivate::sendThroughApplicationEventFilters
    () from /usr/lib/libQtCore.so.4
#25 0xb695583a in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#26 0xb695d929 in QApplication::notify () from /usr/lib/libQtGui.so.4
#27 0xb7bfb484 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#28 0xb76028dc in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#29 0xb695cc06 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#30 0xb69bfe13 in ?? () from /usr/lib/libQtGui.so.4
#31 0xb69becc3 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#32 0xb69e51a8 in ?? () from /usr/lib/libQtGui.so.4
#33 0xb6333f88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#34 0xb63374eb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#35 0xb6337668 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#36 0xb762a69d in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#37 0xb69e492e in ?? () from /usr/lib/libQtGui.so.4
#38 0xb76011cf in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#39 0xb7601390 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#40 0xb69ce79c in QDragManager::drag () from /usr/lib/libQtGui.so.4
#41 0xb69679b1 in QDrag::exec () from /usr/lib/libQtGui.so.4
#42 0xb7fe01e3 in DragAndDropHelper::startDrag ()
   from /opt/kdemod/lib/libdolphinprivate.so.4
#43 0xb7fd9571 in DolphinIconsView::startDrag ()
   from /opt/kdemod/lib/libdolphinprivate.so.4
#44 0xb6dd9489 in QAbstractItemView::mouseMoveEvent ()
   from /usr/lib/libQtGui.so.4
#45 0xb6defb27 in QListView::mouseMoveEvent () from /usr/lib/libQtGui.so.4
#46 0xb7be57ce in KCategorizedView::mouseMoveEvent ()
   from /opt/kdemod/lib/libkdeui.so.5
#47 0xb69a79db in QWidget::event () from /usr/lib/libQtGui.so.4
#48 0xb6cad5bc in QFrame::event () from /usr/lib/libQtGui.so.4
#49 0xb6d3b01e in QAbstractScrollArea::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#50 0xb6ddd175 in QAbstractItemView::viewportEvent ()
   from /usr/lib/libQtGui.so.4
#51 0xb6d3d392 in ?? () from /usr/lib/libQtGui.so.4
#52 0xb7601beb in QCoreApplicationPrivate::sendThroughObjectEventFilters ()
   from /usr/lib/libQtCore.so.4
#53 0xb6955896 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#54 0xb695d929 in QApplication::notify () from /usr/lib/libQtGui.so.4
#55 0xb7bfb484 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#56 0xb76028dc in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#57 0xb695cc06 in QApplicationPrivate::sendMouseEvent ()
   from /usr/lib/libQtGui.so.4
#58 0xb69bfe13 in ?? () from /usr/lib/libQtGui.so.4
#59 0xb69becc3 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#60 0xb69e51a8 in ?? () from /usr/lib/libQtGui.so.4
#61 0xb6333f88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#62 0xb63374eb in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#63 0xb6337668 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#64 0xb762a69d in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#65 0xb69e492e in ?? () from /usr/lib/libQtGui.so.4
#66 0xb76011cf in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#67 0xb7601390 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#68 0xb760372d in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#69 0xb6955764 in QApplication::exec () from /usr/lib/libQtGui.so.4
#70 0x080834bd in _start ()
#0  0xb800f424 in __kernel_vsyscall ()
Comment 5 Arne Schmitz 2008-09-13 16:00:33 UTC
Got the same problem here, KDE 4.1.1
Comment 6 Peter Silva 2008-11-16 15:14:56 UTC
me too. my LAN file sharing is fish based, and thus completely broken.
Comment 7 Peter Penz 2008-12-03 21:13:19 UTC
Confirmed on trunk. I've added David Faure to CC, as he is currently working on MIME type related issues.

@David: from a quick look it seems that the code in kfileplacesmodel.cpp:

KMimeType::Ptr mimetype = KMimeType::mimeType(KIO::NetAccess::mimetype(url, 0));
if (!mimetype->is("inode/directory")) {
   ...
}

does not work reliable on non-local directories.
Comment 8 Luiz Angelo De Luca 2008-12-09 15:54:12 UTC
I still got a crash on 4.1.3
Comment 9 Luiz Angelo De Luca 2008-12-09 15:54:37 UTC
I still get a crash on 4.1.3
Comment 10 Dario Andres 2009-02-03 18:13:14 UTC
*** Bug 183010 has been marked as a duplicate of this bug. ***
Comment 11 Dario Andres 2009-02-03 18:13:48 UTC
*** Bug 173297 has been marked as a duplicate of this bug. ***
Comment 12 A. Futschik 2009-02-04 08:39:05 UTC
I am now running kde 4.2 and the problem seems to be a little different. 

Kate doesn't crash anymore, but the shortcut is not added.

When I run kate from konsole, I'm getting this message when trying to add a shortcut :
[adrien@afk ~]$ kate
kate(3959) KFilePlacesModel::dropMimeData: URL not added to Places as mimetype could not be determined!

If I use the "right click on the sidebar" -> Add an entry, the shortcut is successfully added to kate.

Adrien

Comment 13 David Faure 2009-02-09 21:28:20 UTC
Works for me in 4.2.0 and trunk. Just the icon determination is a bit unreliable, I'll fix it. But I'm surprised by comment #12... Is this really a fish:// URL being dragged onto the file dialog's Places widget?
Comment 14 David Faure 2009-02-09 21:46:09 UTC
SVN commit 923980 by dfaure:

Respect dir-specific icons (e.g. .directory files), but without breaking remote urls like r907513 did in trunk.
CCBUG: 157283


 M  +1 -1      kfileplacesmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=923980
Comment 15 A. Futschik 2009-02-10 09:33:36 UTC
(In reply to comment #13)
> Works for me in 4.2.0 and trunk. Just the icon determination is a bit
> unreliable, I'll fix it. But I'm surprised by comment #12... Is this really a
> fish:// URL being dragged onto the file dialog's Places widget?
> 

Not, it is not ! It is an ftp:// URL. I originaly opend this bug https://bugs.kde.org/show_bug.cgi?id=173297 , but Darío Andrés marked it as duplicate of this one. 
Comment 16 Dario Andres 2009-05-29 20:37:51 UTC
I reopened bug 173297. Should this be marked as FIXED again? Thanks
Comment 17 David Faure 2009-05-30 02:20:26 UTC
Yes, this report was about fish://, and was fixed.