Be a bit more aggressive on the mime type resolving so that remote directories URLs are recognized as directories.

BUG: 157283

svn path=/trunk/KDE/kdelibs/; revision=800918